--- a/covid.html
+++ b/covid.html
@@ -4,7 +4,7 @@
 		<title></title>
 		<meta charset="utf-8">
 		<meta name="autor" content="JP">
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<title>COVID-19</title>
 	</head>
